Changes are visible.

--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,6 @@
         <title>Learning HTML</title>
     </head>
     <body>
-        <h1>Das ist mein erster HTML-Code</h1>
+        <h1>Das ist mein erster HTML-Code!</h1>
     </body>
 </html>
