--- a/Index.html
+++ b/Index.html
@@ -4,5 +4,6 @@
     </head>
     <body>
         <h1>Das ist mein erster HTML-Code!</h1>
+        <p>That is a new Paragraph.</p>
     </body>
 </html>
