--- a/Index.html
+++ b/Index.html
@@ -6,5 +6,13 @@
         <h1>Das ist mein erster HTML-Code!</h1>
         <p>That is a new Paragraph.</p>
         <p>And That is another <br/> Paragraph.</p>
+        <hr/>
+        <p>That is regular text</p>
+        <p><b>That is Bold text</b></p>
+        <p><big>That is big text</big></p>
+        <p>That is <i>Italic text</i></p>
+        <p>And That is <small>Small</small> <i>And</i> <strong>Strong</strong> Text</p>
+        <p>That is <sub>sub</sub> Text and <sup>Sup</sup> text</p>
+        <p>That is <ins>INSERTED</ins> Text And It is Also <del> Deleted</del>Text</p>
     </body>
 </html>
