--- a/Index.html
+++ b/Index.html
@@ -19,5 +19,8 @@
         <p><h2>This is Heading 2</h2></p>
         <p><h3>....</h3></p>
         <p><h6>This is Heading 6</h6></p>
+        <p>And that is Horizontal Line</p>
+        <!--This is how adding Comments to project-->
+        <hr/>
     </body>
 </html>
