--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,8 @@
         <p>And That is <small>Small</small> <i>And</i> <strong>Strong</strong> Text</p>
         <p>That is <sub>sub</sub> Text and <sup>Sup</sup> text</p>
         <p>That is <ins>INSERTED</ins> Text And It is Also <del> Deleted</del>Text</p>
-        <hr/>
+        <!--Adding Attribute To Tag % & px-->
+        <hr width="75%" align="left" />
         <p><h1>This is Heading 1</h1></p>
         <p><h2>This is Heading 2</h2></p>
         <p><h3>....</h3></p>
