--- a/About Me.html
+++ b/About Me.html
@@ -4,8 +4,10 @@
     <title>About Me---über mich</title>
 </head>
 <body>
+    <img src="/Assets/pix.jpg" height="25%" width="25%"/>
     <h1><span>About Me</span></h1>
     <p>
+        
         Hey! I'm <strong>Naim</strong>. Coding has changed my world. It's not just about apps.
          Learning to code gave me <i>problem-solving skills</i>
           and a way to communicate with others on a technical level. 
@@ -14,5 +16,6 @@
             where they build your self-esteem and keep you motivated.
              Join me in this rewarding journey. You'll have fun, get help, and learn along the way!
      </p>
+     
 </body>
 </html>
