--- a/About Me.html
+++ b/About Me.html
@@ -4,7 +4,7 @@
     <title>About Me---über mich</title>
 </head>
 <body>
-    <img src="/Assets/pix.jpg" height="25%" width="25%"/>
+    <img src="..//Html-Sololearn/Assets/pix1.jpg" height="10%" width="10%" />
     <h1><span>About Me</span></h1>
     <p>
         
