--- a/About Me.html
+++ b/About Me.html
@@ -16,7 +16,20 @@
             where they build your self-esteem and keep you motivated.
              Join me in this rewarding journey. You'll have fun, get help, and learn along the way!
      </p>
-     <p><h4><a href="https://www.linkedin.com/in/naim-abbasi-darab-1193ab2a/">Visit My linkdin</a></h4></p>
-     
+     <p><h4><a href="https://www.linkedin.com/in/naim-abbasi-darab-1193ab2a/" target="_blank" >Visit My linkdin</a></h4></p>
+     <hr/>
+     <p><h2>Meine beruflichen Tätigkeiten</h2> 
+         <ol>
+             <li>Projektmanager (Warenhaus) Einführung von Prozessen </li>
+             <li>Teamleiter Support</li>
+             <li>SharePoint 2013 Administrator </li>
+             <li>Scrum Master </li>
+             <li>C#/Visual Basic Entwickler </li>
+             <li>SQL Server-Abfrage Schreiber</li>
+             <li>Team Foundation Server Administrator</li>
+             <li>Android Entwickler</li>
+
+         </ol>
+     </p>
 </body>
 </html>
