--- a/About Me.html
+++ b/About Me.html
@@ -8,23 +8,23 @@
        
         <img src="..//Html-Sololearn/Assets/pix1.jpg" height="8%" width="8%"/>
         <tr>
-            <td bgcolor="black" style="color:white;">Name: </td>
+            <td bgcolor="black" style="color:white; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; ">Name: </td>
             <td bgcolor="black" style="color:white;">Naim Abbasi Darab</td>
         </tr>
         <tr>
-          <td bgcolor="black" style="color:white;">Anschrift: </td>  
+          <td bgcolor="black" style="color:white; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Anschrift: </td>  
           <td bgcolor="black" style="color:white;">Laleh Strasse 5177957114</td>
         </tr>
         <tr>
-            <td bgcolor="red">Telefon: </td>
+            <td bgcolor="red" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;" >Telefon: </td>
             <td bgcolor="red">+98-914-3159859</td>
         </tr>
         <tr>
-            <td bgcolor="yellow">Geburtsdatum: </td>
+            <td bgcolor="yellow" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Geburtsdatum: </td>
             <td bgcolor="yellow">15. Februar 1987</td>
         </tr>
         <tr>
-            <td bgcolor="yellow">E-Mail: </td>
+            <td bgcolor="yellow" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">E-Mail: </td>
             <td bgcolor="yellow">abbasi.naim@gmail.com</td>
         </tr>
 
