HTML5-adding Header

--- a/Contact.html
+++ b/Contact.html
@@ -1,10 +1,12 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>
             Kontakt-kontaktiere mich
         </title>
     </head>
-    <body bgcolor="red"><h1>Contact Form</h1>
+    <body bgcolor="red">
+        <header><h1>Contact Form</h1></header>
         <form action="#" method="POST" >
             <input name="name" type="text" value="Your Name"/><br/>
             <input name="email" type="email" value="Your Email" /><br/>
@@ -12,6 +14,7 @@
             <textarea name="message">message</textarea><br/>
             <input type="submit" value="Send"/>
         </form>
+        
 
     </body>
 </html>
