--- a/Contact.html
+++ b/Contact.html
@@ -14,7 +14,10 @@
             <textarea name="message">message</textarea><br/>
             <input type="submit" value="Send"/>
         </form>
-        
-
+        <br/>
+        <nav>
+         <a href="../Html-Sololearn/About Me.html"><ins>about me pg</ins></a>
+        </nav><br/>
+        <audio controls src="../Html-Sololearn/Assets/Guten Morgen Sonnenschein.mp3" ></audio>
     </body>
 </html>
