--- a/Contact.html
+++ b/Contact.html
@@ -19,5 +19,7 @@
          <a href="../Html-Sololearn/About Me.html"><ins>about me pg</ins></a>
         </nav><br/>
         <audio controls src="../Html-Sololearn/Assets/Guten Morgen Sonnenschein.mp3" ></audio>
+        <br/>
+        Status of music: <progress min="0" max="100" value="10" ></progress>
     </body>
 </html>
