Adding Placeholder to input method

--- a/Contact.html
+++ b/Contact.html
@@ -16,7 +16,7 @@
                 </tr>
                    <tr>
                    <td><label>Your Email:</label></td>
-                   <td> <input name="email" type="email"/></td><br/>
+                   <td> <input name="email" type="email" placeholder="email@example.com"/></td><br/>
                 </tr>
                 <tr>
                    <td><label>Your phone</label></td>
