--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,7 @@
             <table>
                 <tr>
                     <td><label>Your Name:</label></td>
-                   <td> <input name="name" type="text" /></td><br/>
+                   <td> <input name="name" type="text" autofocus /></td><br/>
                 </tr>
                    <tr>
                    <td><label>Your Email:</label></td>
