Form Autocomplete and required

--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
     <body bgcolor="red">
         <header><h1>Contact Form</h1></header>
        
-        <form action="#" method="POST" >
+        <form action="#" method="POST" autocomplete="off">
             <table>
                 <tr>
                     <td><label>Your Name:</label></td>
@@ -16,7 +16,7 @@
                 </tr>
                    <tr>
                    <td><label>Your Email:</label></td>
-                   <td> <input name="email" type="email" placeholder="email@example.com"/></td><br/>
+                   <td> <input name="email" type="email" placeholder="email@example.com" required/></td><br/>
                 </tr>
                 <tr>
                    <td><label>Your phone</label></td>
