--- a/Contact.html
+++ b/Contact.html
@@ -14,6 +14,17 @@
                     <td><label>Your Name:</label></td>
                    <td> <input name="name" type="text" autofocus /></td><br/>
                 </tr>
+                <tr>
+                    <td><label>Gender: </label></td>
+                    <td><input id="gender" type="text" list="sex" />
+                <datalist id="sex">
+                    <option value="M">
+                    <option value="W">
+                    <option value="d">
+
+                </datalist>
+            </td>
+            </tr>
                    <tr>
                    <td><label>Your Email:</label></td>
                    <td> <input name="email" type="email" placeholder="email@example.com" required/></td><br/>
@@ -29,6 +40,7 @@
                 <tr>
                    <td colspan="2"><p style="text-align: center;"><input type="submit" value="Send"/></p></td>
                 </tr>
+                
 
         </form>
     </table>
