--- a/About Me.html
+++ b/About Me.html
@@ -82,5 +82,8 @@
      </ol>
      </p>
      <hr/>
+     <script>
+         document.write("I am learning java script")
+     </script>
 </body>
 </html>
