--- a/Contact.html
+++ b/Contact.html
@@ -52,7 +52,7 @@
         <br/>
         Status of music: <progress min="0" max="100" value="10" ></progress>
     </body>
-    <footer>Copyright - 2020 
+    <footer> © Copyright - 2020 
        <!-- <svg width="1000" height="1000">
             <circle cx="80" cy="80" r="50" fill="green" />
          </svg>-->
