java script alert in head block

--- a/About Me.html
+++ b/About Me.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>About Me---über mich</title>
+    <script type="text/javascript">
+    alert("Wilkommen auf meiner Seite!")
+    </script>
 </head>
 <body>
     <table border="1">
@@ -82,8 +85,8 @@
      </ol>
      </p>
      <hr/>
-     <script>
+     <!-- <script>
          document.write("I am learning java script")
-     </script>
+     </script> -->
 </body>
 </html>
