adding external javascript source to page

--- a/About Me.html
+++ b/About Me.html
@@ -2,8 +2,11 @@
 <html>
 <head>
     <title>About Me---über mich</title>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
     alert("Wilkommen auf meiner Seite!")
+    </script> -->
+    <script src="../Html-Sololearn/Src/java.js">
+
     </script>
 </head>
 <body>
