--- a/About Me.html
+++ b/About Me.html
@@ -5,8 +5,9 @@
     <!-- <script type="text/javascript">
     alert("Wilkommen auf meiner Seite!")
     </script> -->
-    <script src="../Html-Sololearn/Src/java.js">
-
+    <script type="text/javascript" src="../Html-Sololearn/Src/java.js">
+      // way of commenting in script tag 
+      /* second way of commenting in script tag*/
     </script>
 </head>
 <body>
@@ -91,5 +92,9 @@
      <!-- <script>
          document.write("I am learning java script")
      </script> -->
+     <p>Ich bin <script>document.write(myAge);</script>
+        Jahre alt.
+     </p>
+
 </body>
 </html>
