Declareing variable name and lastName

--- a/About Me.html
+++ b/About Me.html
@@ -96,5 +96,9 @@
         Jahre alt.
      </p>
 
+     <p>And my Name is <script>document.write(myName);</script>
+        and my last name is <script>document.write(myLastName)</script>
+        
+     </p>
 </body>
 </html>
