--- a/About Me.html
+++ b/About Me.html
@@ -98,7 +98,11 @@
 
      <p>And my Name is <script>document.write(myName);</script>
         and my last name is <script>document.write(myLastName)</script>
-        
+        <br/>
+        Sum of <script>document.write(num1)</script>
+        and 
+         <script>document.write(num2)</script>
+         are = <script>document.write(num1+num2)</script> 
      </p>
 </body>
 </html>
