--- a/About Me.html
+++ b/About Me.html
@@ -102,7 +102,8 @@
         Sum of <script>document.write(num1)</script>
         and 
          <script>document.write(num2)</script>
-         are = <script>document.write(num1+num2)</script> 
+         are = <script>document.write(num1+num2)</script> <br/>
+         <script>document.write(adult)</script>
      </p>
 </body>
 </html>
