--- a/About Me.html
+++ b/About Me.html
@@ -103,7 +103,8 @@
         and 
          <script>document.write(num2)</script>
          are = <script>document.write(num1+num2)</script> <br/>
-         <script>document.write(adult)</script>
+         <script>document.write(adult)</script><br/>
+         <script>document.write(stringA + ' '+ stringB)</script>
      </p>
 </body>
 </html>
