--- a/About Me.html
+++ b/About Me.html
@@ -104,7 +104,8 @@
          <script>document.write(num2)</script>
          are = <script>document.write(num1+num2)</script> <br/>
          <script>document.write(adult)</script><br/>
-         <script>document.write(stringA + ' '+ stringB)</script>
+         <script>document.write(stringA + ' '+ stringB)</script><br/>
+
      </p>
 </body>
 </html>
