Selecting and Editing Elements

--- a/About Me.html
+++ b/About Me.html
@@ -105,7 +105,9 @@
          are = <script>document.write(num1+num2)</script> <br/>
          <script>document.write(adult)</script><br/>
          <script>document.write(stringA + ' '+ stringB)</script><br/>
-
      </p>
+
+     <button onclick="myFunction()">Try it</button>
+
 </body>
 </html>
