getElementsByTagName-change paragraph color to white

--- a/About Me.html
+++ b/About Me.html
@@ -108,6 +108,7 @@
      </p>
 
      <button onclick="myFunction()">Try it</button>
+     <button onclick="undo()">Default</button>
 
 </body>
 </html>
