Change scr of image whith getElementById

--- a/About Me.html
+++ b/About Me.html
@@ -13,7 +13,7 @@
 <body>
     <table border="1">
        
-        <img src="..//Html-Sololearn/Assets/pix1.jpg" height="8%" width="8%"/>
+        <img id="myimage" src="..//Html-Sololearn/Assets/pix1.jpg" height="8%" width="8%"/>
         <tr>
             <td bgcolor="black" style="color:white; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; ">Name: </td>
             <td bgcolor="black" style="color:white;">Naim Abbasi Darab</td>
