--- a/About Me.html
+++ b/About Me.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <table border="1">
-        
+
        
         <img id="myimage" src="..//Html-Sololearn/Assets/pix1.jpg" height="8%" width="8%"/>
         <tr>
@@ -110,6 +110,8 @@
 
      <button onclick="myFunction()">Try it</button>
      <button onclick="undo()">Default</button>
+
+     <div id="demo" style="color: red;"> changing div elements</div>
 
 </body>
 </html>
