creating Element and adds it to the existing div element

--- a/About Me.html
+++ b/About Me.html
@@ -112,6 +112,7 @@
      <button onclick="undo()">Default</button>
 
      <div id="demo" style="color: red;"> changing div elements</div>
+     <div id="demo2"> Creating Elements</div>
 
 </body>
 </html>
