--- a/About Me.html
+++ b/About Me.html
@@ -111,7 +111,9 @@
      <button onclick="myFunction()">Try it</button>
      <button onclick="undo()">Default</button>
 
-     <div id="demo" style="color: red;"> changing div elements</div>
+     <div id="demo" style="color: red;"> changing div elements
+    <p id="p1">This paragraph should remove.</p>
+    </div>
      <div id="demo2"> Creating Elements</div>
 
 </body>
