--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,7 @@
 <html>
-    <head>
+    <head> <link rel="stylesheet" href="../Html-Sololearn/Src/style.css"> 
+
+        <script type="text/javascript" src="../Html-Sololearn/Src/java.js" ></script>
         <title>Learning HTML</title>
     </head>
     <body>
@@ -23,5 +25,8 @@
         <p>And that is Horizontal Line</p>
         <!--This is how adding Comments to project-->
         <hr/>
+        <div id="container">
+        <div id="box"></div>
+    </div>
     </body>
 </html>
