--- a/Index.html
+++ b/Index.html
@@ -28,5 +28,6 @@
         <div id="container">
         <div id="box"></div>
     </div>
+    <p onclick="showEvent()" > click to show which page you are on!!</p>
     </body>
 </html>
