Event Handler assigning to elements

--- a/Index.html
+++ b/Index.html
@@ -29,5 +29,6 @@
         <div id="box"></div>
     </div>
     <p onclick="showEvent()" > click to show which page you are on!!</p>
-    </body>
+    <button id="demo">click</button>    
+</body>
 </html>
