OnChange event for changing textbox text when leaving

--- a/Index.html
+++ b/Index.html
@@ -30,5 +30,6 @@
     </div>
     <p onclick="showEvent()" > click to show which page you are on!!</p>
     <button id="demo">click</button>    
+    <input type="text" id="name" onchange="funcChange()">
 </body>
 </html>
