--- a/Index.html
+++ b/Index.html
@@ -31,5 +31,6 @@
     <p onclick="showEvent()" > click to show which page you are on!!</p>
     <button id="demo">click</button>    
     <input type="text" id="name" onchange="funcChange()">
+    <button id="eva">Event Handler</button>
 </body>
 </html>
