creating image slider

--- a/Index.html
+++ b/Index.html
@@ -32,5 +32,11 @@
     <button id="demo">click</button>    
     <input type="text" id="name" onchange="funcChange()">
     <button id="eva">Event Handler</button>
+    <div>
+        <button onclick="prev()"> Prev </button>
+        <img id="slider" src="http://www.sololearn.com/uploads/slider/1.jpg" 
+          width="200px" height="100px"/>
+        <button onclick="next()"> Next </button>
+      </div>
 </body>
 </html>
