--- a/Index.html
+++ b/Index.html
@@ -38,5 +38,11 @@
           width="200px" height="100px"/>
         <button onclick="next()"> Next </button>
       </div>
+      <hr/>
+      <form onsubmit="return validate()" method="POST"></form>
+      Your Email:<input type="text" id="email1" name="email1"/><br/>
+      Repeat Email: <input type="text" id="email2" name="email2" /><br/>
+      submit<input type="submit" value="Submit" />
+
 </body>
 </html>
